# local-docker-rtmp-server

./: .dockerignore  .example.env  .gitignore  .nodeprop.yml  Makefile  README.md  docker-compose-2.yaml  docker-compose.override.yaml  docker-compose.override.yaml.disabled  docker-compose.traefik.yaml  docker-compose.yaml  dockerignore
.github/: GitVersion.yml
app/: .dockerignore  Dockerfile  entrypoint.sh  mount-nas.sh  nginx.conf  nginx.conf.template
docs/: NON-FUNCTIONAL-REQUIREMENTS.md  TODO.md
event-broker/: Dockerfile  app.py  entrypoint.sh  requirements.txt
infra/: Dockerfile.infra-node  Makefile  README.md  docker-compose.infra.yaml  go.mod
metadata-service/: Dockerfile  README.md  app-flask-version.disabled  app.py  healthcheck.sh  rabbitmq.conf  requirements.txt  update_service.sh
minio/: Dockerfile  docker-compose.minio.yaml
open-ndi/: Dockerfile.sender  README.md  docker-compose.open-ndi.yaml  go.mod
pi-obs-container/: Dockerfile  Dockerfile-v2-prerefactor.arm64  Dockerfile-v2.arm64  Dockerfile.arm64  Dockerfile.depricated  Dockerfile.optimized.arm64  README.md  Todo.md  commands.disabled  detect-devices.sh  (+6 more)
services/video-pipeline/: .dockerignore  CMakeLists.txt  Dockerfile  entrypoint.sh
services/video-pipeline/Inference/: EdgeTPUWrapper.cpp  EdgeTPUWrapper.h
services/video-pipeline/Models/: InferenceResult.h  VideoFrame.h
services/video-pipeline/NDI/: NDIReceiver.cpp  NDIReceiver.h  NDISender.cpp  NDISender.h
services/video-pipeline/Processing/: OverlayProcessor.cpp  OverlayProcessor.h
services/video-pipeline/scripts/: tee.sh
(+391 files in other folders)
